--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                       <li onclick="resetDisegno()"><a class="dropdown-item">Reset</a></li>
                       <li onclick="scaricaDisegno()"><a class="dropdown-item">Scarica immagine</a></li>
+                      <li><a class="dropdown-item" href="https://github.com/katy01101011/pixit">Metti una <span class="text-warning">&starf;</span> sulla repository GitHub</a></li>
                       <li><a class="dropdown-item" href="https://www.linkedin.com/in/karolina-tymoszuk/">Seguimi su LinkedIn</a></li>
                     </ul>   
                 </div>
