--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <h6 class="text-center">BUON DIVERTIMENTO!!!</h6>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-info text-light">Ho capito <span class="h5">&#128516;</span><span>&#128077;</span></button>
+                <button type="button" class="btn btn-info text-light" data-bs-dismiss="modal">Ho capito <span class="h5">&#128516;</span><span>&#128077;</span></button>
             </div>
           </div>
         </div>
